name:                 nnhaskell
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Ingvaras Merkys
maintainer:           merkys@ingvaras.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable nnhaskell
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  -- gtk
  hs-source-dirs:       src
  default-language:     Haskell2010

-- brew cask install xquartz
-- brew install gtk
-- cabal install gtk -f have-quartz-gtk
