name:                nnhaskell
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Ingvaras Merkys
maintainer:          nnhaskell@ingvaras.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable nnhaskell
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base   >= 4.8.2  && < 4.9,
                       matrix >= 0.3.6  && < 0.4,
                       vector >= 0.12.0 && < 0.13,
                       split  >= 0.2.3  && < 0.3,
                       gtk    >= 0.14.7 && < 0.15
  hs-source-dirs:      src
  default-language:    Haskell2010